fix: Download jars directly instead of using clojure-tools v1.0.6